2021-11-15 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSSplitView.m: Correct issue introduced in the previous change
	for this class.  The code now uses the older, somewhat broken, logic
	for version 0 and the newer logic for later versions.

2021-11-18 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBrowser.m: Check [bc isLoaded] in _remapColumnSubviews
        before making the window first responder.

2021-11-15 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSSplitView.h
	* Source/NSSplitView.m: Incorporate and refactor changes to NSSplitView
        to support Think, Thin, and PaneSplitter NSSplitViewDividerStyle
        settings.

2021-11-15 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSView.m: Add cast to id in case nil is not "id".  This
        is the same fix that was done by Frederick Seiffert on base.

2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSPopUpButtonCell.m
	* Source/NSTabView.m
	* Source/NSTextContainer.m
	* Source/NSTextFieldCell.m
	* Source/NSTextField.m
	* Source/NSTextView.m
	* Source/NSWindowController.m: Remaining improvements and stability
        changes contributed by testplant. 

2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSToolbarView.m: Toolbar fixes to prevent the index
        from exceeding the number of visibleBackViews.

2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSScrollView.m: Add scrollview keys from TP merge.

2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSToolTips.m: Add extra pixels so that tool tip doesn't
        overrun the window.

2021-10-25 Riccardo Mottola <rm@gnu.org>

	* Source/NSTextStorage.m:
	Keep local variables to ensure correct values during recursion.

2021-10-21 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSGlyphInfo.[hm]: Class which provides info about